<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">JustJava</string>

    <string name="enter_your_name">Enter your name</string>

    <string name="price">price</string>

    <string name="_0" translatable="false">$0</string>

    <string name="_zero" translatable="false">0</string>

    <string name="order">order</string>

    <string name="reset">reset</string>

    <string name="toppings">Toppings</string>

    <string name="whipped_cream">Whipped cream</string>

    <string name="chocolate">Chocolate</string>

    <string name="quantity">quantity</string>

    <string name="plus" translatable="false">+</string>

    <string name="minus" translatable="false">-</string>

    <string name="order_sumary">ORDER SUMMARY</string>

    <string name="name">Name :<xliff:g id="name" example="Amy">%s</xliff:g></string>

    <string name="quantity2">Quantity: </string>

    <string name="add_whipped">Add whipped cream? </string>

    <string name="add_chocolate">Add chocolate? </string>

    <string name="total">Total </string>

    <string name="you_cannot_under"> You cannot have less than 1 coffee. </string>


</resources>
