<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Email Address"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/toppings"
        style="@style/TextViewStyle" />

    <CheckBox
        android:id="@+id/checkWhipped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/whipped_cream"
        android:paddingLeft="24dp"
        android:textSize="16sp"/>

    <CheckBox
        android:id="@+id/checkChocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/chocolate"
        android:paddingLeft="24dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/quantity"
        style="@style/TextViewStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/addButton"
        android:layout_marginLeft="16dp"
        android:text="@string/plus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="increment"/>

    <TextView
        android:id="@+id/quantity_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/_zero"
        android:paddingStart="8dp" />

    <Button
        android:id="@+id/substractButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:text="@string/minus"
        android:onClick="decrement"/>

    </LinearLayout>

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/price"
        style="@style/TextViewStyle" />

    <TextView
        android:id="@+id/price_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/_0"
        style="@style/TextViewStyle" />



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/order"
        android:onClick="submitOrder"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/reset"
        android:onClick="reset"/>

</LinearLayout>

</ScrollView>